Actualizada estructura de url a APIS

--- a/app/src/main/res/values/urls.xml
+++ b/app/src/main/res/values/urls.xml
@@ -1,8 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="url_cuestionario"></string>
-    <string name="url_map_service"></string>
-    <string name="url_heatmap_service"></string>
+    <string name="url_cuestionario">http://plataforma.saludnl.gob.mx/covid19/test-mobile.html</string>
     <string name="info_coronavirus">http://www.nl.gob.mx/coronavirus</string>
-    <string name="api_services">http://201.144.106.133/services/alertacovid19/</string>
+    <string name="api_services"></string>
 </resources>
